<resources>
    <string name="app_name">iKaizen</string>
    <string name="action_settings">Settings</string>

    <!-- strings for KaizenDetailsActivity -->
    <string name="title_activity_kaizen_details">Kaizen Details</string>
    <string name="lblOwnerStr">Owner: </string>
    <string name="lblDeptStr">Dept: </string>
    <string name="lblDateStr">Created: </string>
    <string name="lblProblemStatementStr">Problem Statement: </string>
    <string name="lblSevenWastesStr">Seven Wastes</string>
    <string name="lblOverProductionStr">Over Production:</string>
    <string name="lblTransportationStr">Transportation:</string>
    <string name="lblMotionStr">Motion:</string>
    <string name="lblWaitingStr">Waiting:</string>
    <string name="lblProcessingStr">Processing:</string>
    <string name="lblInventoryStr">Inventory:</string>
    <string name="lblDefectsStr">Defects:</string>
    <string name="lblRootCausesStr">Possible Root Causes:</string>
    <string name="btnImagesStr">Images</string>
    <string name="btnSolutionsStr">Solutions</string>
    <string name="lblWasteCaptionStr">Total Waste:</string>
    <string name="lblWasteUnitsStr">min/year</string>
    <!-- strings for menu_kaizen_details -->
    <string name="action_edit_kaizen">Edit</string>
    <string name="action_delete_kaizen">Delete</string>

    <!-- strings for KaizenEditActivity-->
    <string name="title_activity_kaizen_edit">Edit Kaizen</string>
    <string name="btnSaveKaizenStr">Save Kaizen</string>
    <string name="title_activity_kaizen_list">KaizenListActivity</string>
    <string name="title_activity_temp">TempActivity</string>

    <!-- strings for KaizenListActivity -->
    <string name="btnEditKaizenStr">Edit</string>
    <string name="btnViewKaizenDetailsStr">Details</string>
    <string name="lblWelcomeStr">Hi there!</string>
    <string name="lblInstructionsStr">Create a new Kaizen or select one from the list below to get started!</string>
    <string name="btnDeleteKaizenStr">Delete</string>

    <!-- strings for SettingsActivity -->
    <string name="title_activity_settings">Settings</string>
    <string name="lblUISettingsHeadingStr">UI Settings</string>
    <string name="swcShowOwnerDataStr">Show owner info</string>
    <string name="swcEnableWelcomeMessageStr">Enable welcome message</string>
    <string name="lblAboutAppStr">About this app...</string>
    <string name="lblCreditsSettingsHeadingStr">Credits</string>

    <!-- strings for ImageViewerActivity -->
    <string name="title_activity_image_viewer">View Image</string>
    <string name="action_delete_image">Delete</string>

    <!-- strings for KaizenRecyclerActivity -->
    <string name="title_activity_recycler">Kaizen List</string>
    <string name="action_sort_by">Sort by...</string>
    <!--<string name="lblInstructionsStr">Let\'s get started! Press the create button below to create a new Kaizen.</string>-->
    <string name="lblTipCaptionStr">TIP:</string>
    <string name="lblTipDetailsStr">You can long-press a card to edit or delete it.</string>

    <!-- strings for SortKaizenByDialogFragment -->
    <string name="sort_kaizen_by_dialog_title">Sort Kaizen by...</string>
    <string name="sort_by_date_modified">Date modified</string>
    <string name="sort_by_total_waste">Total waste</string>
    <string-array name="arrSortKaizenByOptions">
        <item>@string/sort_by_date_modified</item>
        <item>@string/sort_by_total_waste</item>
    </string-array>

    <!-- strings for AboutActivity -->
    <string name="title_activity_about">About</string>
    <string name="lblCredits1Str">iKaizen is developed by Ian McLerran, with instruction by Linda Zuvich.</string>
    <string name="lblCredits2Str">Emoji provided free by http://emojione.com</string>
    <string name="lblCredits3Str">Icon assests resized using Android Asset Studio</string>
    <string name="lblCredits3LinkStr">http://romannurik.github.io/AndroidAssetStudio/</string>
    <string name="lblCreditsCaptionStr">Credits</string>


    <!-- CountermeasureEditActivity -->
    <string name="title_activity_countermeasure_edit">Edit Countermeasure</string>
    <string name="lblPreventativeActionCaptionStr">Preventative Action:</string>
    <string name="chkCutMuriStr">Cut muri</string>
    <string name="chkThreeXBetterStr">3X better</string>
    <string name="chkTruePullStr">True pull</string>
    <string name="lblCostToImplementCaptionStr">Cost to implement:</string>
    <string name="lblDateWalkedOnCaptionStr">Date walked on:</string>
    <string name="action_delete_countermeasure">Delete</string>

    <!-- TODO: sort strings by activities and fragments -->
    <!-- SolutionOverviewTabbedActivity -->
    <string name="title_activity_solution_overview_tabbed">Solution Overview</string>
    <string name="lblTodaysFixCaptionStr">Today\'s fix:</string>
    <string name="lblEstimatedSavingsStr">Estimated savings:</string>
    <string name="btnFeelsEmojiStr">Feels…</string>
    <string name="lblSignedOffByCaptionStr">Signed off by:</string>
    <string name="lblDateSolvedCaptionStr">Date Solved:</string>
    <string name="lblImprovementsCaptionStr">Improvements:</string>
    <string name="lblCostToImplementDataDefaultStr">$0.00</string>
    <string name="lblDateWalkedOnDataDefaultStr">N/A</string>
    <string name="lblCostToImplementCaptionShortStr">Cost:</string>

    <string name="txtSignedOffByHintStr">lead name</string>
    <string name="btnCountermeasureListTabStr">Countermeasures</string>
    <string name="btnSolutionDetailsTabStr">Solution Details</string>
    <string name="lblCostToImplementEditCaptionStr">Cost to implement: $</string>
    <string name="lblDateWalkedOnCaptionShortStr">Walked On:</string>
    <string name="lblEstimatedSavingsEditCaptionStr">Estimated savings: $</string>

    <!-- SolutionEditActivity -->
    <string name="title_activity_solution_edit">Edit Solution</string>

    <string name="lblDateSolvedHintStr">MM/DD/YYYY</string>

    <!-- EmojiPickerActivity -->
    <string name="title_activity_emoji_picker">Emoji Picker</string>

    <!-- SortCountermeasureByDialogFragment -->
    <string name="sort_countermeasure_by_dialog_title">Sort Kaizen by...</string>
    <string name="sort_by_cost_ascending">Cost (ascending)</string>
    <string name="sort_by_cost_descending">Cost (descending)</string>
    <string-array name="arrSortCountermeasureByOptions">
        <item>@string/sort_by_date_modified</item>
        <item>@string/sort_by_cost_ascending</item>
        <item>@string/sort_by_cost_descending</item>
    </string-array>


    <!-- DataManager -->
    <string name="errGetDataStr">Cannot Access Database</string>

    <!-- ImageGalleryActivity -->
    <string name="title_activity_image_gallery">Image Gallery</string>


</resources>
