<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".KaizenDetailsActivity">

    <item
        android:id="@+id/action_edit_kaizen"
        android:orderInCategory="100"
        android:icon="@drawable/ic_pencil_white_24dp"
        android:title="@string/action_edit_kaizen"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete_kaizen"
        android:orderInCategory="100"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_delete_kaizen"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>